--- a/src/Style.css
+++ b/src/Style.css
@@ -46,7 +46,7 @@ body {
 #components-layout-demo-custom-trigger .logo {
   height: 32px;
   margin: 16px;
-  background: rgba(255, 255, 255, 0.3);
+  /*background: rgba(255, 255, 255, 0.3);*/
 }
 
 .site-layout .site-layout-background {
