--- a/src/Style.css
+++ b/src/Style.css
@@ -15,6 +15,11 @@ body {
   margin-right: auto;
   margin-left: auto;
 }
+
+.roundedShadow{
+  border-radius:10px ;
+  box-shadow: 0 10px 16px 0 rgb(0 0 0 / 20%) ;
+}
 @media (min-width: 768px) {
   .container {
     width: 740px;
